--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/qPiJikoREVUUPKtmZNZEte-1200-80.jpg') no-repeat center center fixed;
+    background: url('https://github.com/ksturff/GTA-VI-Official-Countdown/blob/main/GTA-6-Logo-4K-Wallpaper.png') no-repeat center center fixed;
     background-size: cover;
   }
 
