--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     margin: 0;
     font-family: Arial, sans-serif;
     display: flex;
-    justify-content: center;
+    flex-direction: column; /* Align items vertically */
+    justify-content: center; /* Center items vertically */
     align-items: center;
     background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/GTA-6-Logo-4K-Wallpaper.png') no-repeat center center fixed;
     background-size: cover;
@@ -18,17 +19,17 @@
 
   .countdown-container {
     text-align: center;
-    background: rgba(0, 0, 0, 0.75); /* semi-transparent background */
     color: #fff;
-    border-radius: 5px;
-    padding: 20px;
-    margin: 20px;
-    display: inline-block;
+    font-size: 40px; /* Adjusted font size for the countdown */
+    margin-top: 20vh; /* Adjusted margin to push the countdown below the logo */
+    background: none; /* Removed semi-transparent background */
+    padding: 10px;
+    margin-bottom: 20px; /* Add some space at the bottom */
   }
 
   .countdown {
-    font-size: 50px;
-    margin: 10px;
+    margin: 0;
+    padding: 0;
   }
 </style>
 </head>
