--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   .countdown-container {
     text-align: center;
     color: #fff;
-    font-size: 40px; /* Adjusted font size for the countdown */
-    margin-top: 20vh; /* Adjusted margin to push the countdown below the logo */
+    font-size: 3vw; /* Font size relative to the width of the viewport */
+    margin-top: 40vh; /* Increased margin-top to push the countdown further down */
     background: none; /* Removed semi-transparent background */
     padding: 10px;
     margin-bottom: 20px; /* Add some space at the bottom */
