--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Countdown Timer</title>
 <style>
+  @font-face {
+    font-family: 'Acherus Grotesque';
+    src: url('AcherusGrotesque-ExtraBold.woff') format('woff');
+    font-weight: 800; /* Extra Bold */
+    font-style: normal;
+  }
+
   body, html {
     height: 100%;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Acherus Grotesque', Arial, sans-serif;
     display: flex;
     flex-direction: column; /* Align items vertically */
     justify-content: center; /* Center items vertically */
@@ -28,6 +35,7 @@
   }
 
   .countdown {
+    font-family: 'Acherus Grotesque', sans-serif;
     margin: 0;
     padding: 0;
   }
