--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
 
   @keyframes glowing {
     0%, 100% {
-      text-shadow: 0 0 4px #ff7f50, 0 0 10px #ff7f50, 0 0 20px #ff4500, 0 0 30px #ff4500, 0 0 40px #ff4500;
+      text-shadow: 0 0 4px transparent, 0 0 10px transparent, 0 0 20px transparent, 0 0 30px transparent, 0 0 40px transparent, 0 0 50px transparent, 0 0 60px transparent, 0 0 70px transparent;
+    }
+    25% {
+      text-shadow: 0 0 4px #A58475, 0 0 10px #A58475, 0 0 20px #A58475, 0 0 30px #A58475, 0 0 40px #A58475, 0 0 50px #A58475, 0 0 60px #A58475, 0 0 70px #A58475;
     }
     50% {
-      text-shadow: 0 0 10px #ff7f50, 0 0 20px #ff4500, 0 0 30px #ff4500, 0 0 40px #ff4500, 0 0 50px #ff4500;
+      text-shadow: 0 0 4px #B659AF, 0 0 10px #B659AF, 0 0 20px #B659AF, 0 0 30px #B659AF, 0 0 40px #B659AF, 0 0 50px #B659AF, 0 0 60px #B659AF, 0 0 70px #B659AF;
+    }
+    75% {
+      text-shadow: 0 0 4px #A58475, 0 0 10px #A58475, 0 0 20px #A58475, 0 0 30px #A58475, 0 0 40px #A58475, 0 0 50px #A58475, 0 0 60px #A58475, 0 0 70px #A58475;
     }
   }
 
