--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
       padding: 0;
     }
 
-    /* Style for the GIF */
     .gif-container {
       position: absolute; /* Absolute positioning */
-      top: 92vh; /* Place the GIF at 85vh from the top */
+      top: 92vh; /* Place the GIF at 92vh from the top */
       left: 50%; /* Center the GIF horizontally */
       transform: translate(-50%, -50%); /* Adjust for exact centering */
       max-width: 600px; /* Max width to make the GIF responsive */
       height: auto; /* Maintain aspect ratio */
+      cursor: pointer; /* Change cursor on hover */
     }
 
+    /* Make the entire gif container clickable */
     .gif-link {
       position: absolute;
       top: 92vh;
@@ -63,49 +64,49 @@
 </head>
 <body>
 
-<!-- Clickable GIF container -->
-<a href="trailer.html" class="gif-link">
-  <div class="gif-container">
-    <img src="https://ksturff.github.io/GTA-VI-Official-Countdown/ezgif-4-484594a530.gif" alt="Animated Logo">
+  <!-- GIF container as a clickable link -->
+  <a href="trailer.html" class="gif-link">
+    <div class="gif-container">
+      <img src="https://ksturff.github.io/GTA-VI-Official-Countdown/ezgif-4-484594a530.gif" alt="Animated Logo">
+    </div>
+  </a>
+
+  <!-- Countdown container -->
+  <div class="countdown-container">
+    <div id="countdown" class="countdown">
+      00d 00h 00m 00s
+    </div>
   </div>
-</a>
 
-<!-- Countdown container -->
-<div class="countdown-container">
-  <div id="countdown" class="countdown">
-    00d 00h 00m 00s
-  </div>
-</div>
+  <!-- Countdown Timer Script -->
+  <script>
+    // Set the date we're counting down to
+    var countDownDate = new Date("Sep 23, 2025 00:00:00 EST").getTime();
 
-<!-- Countdown Timer Script -->
-<script>
-  // Set the date we're counting down to
-  var countDownDate = new Date("Sep 23, 2025 00:00:00 EST").getTime();
+    // Update the countdown every 1 second
+    var countdownFunction = setInterval(function() {
+      // Get today's date and time
+      var now = new Date().getTime();
 
-  // Update the countdown every 1 second
-  var countdownFunction = setInterval(function() {
-    // Get today's date and time
-    var now = new Date().getTime();
+      // Find the time remaining until the countdown date
+      var timeRemaining = countDownDate - now;
 
-    // Find the time remaining until the countdown date
-    var timeRemaining = countDownDate - now;
+      // Time calculations for days, hours, minutes, and seconds
+      var days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
+      var hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      var minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
+      var seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
 
-    // Time calculations for days, hours, minutes, and seconds
-    var days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
-    var hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
+      // Output the result in the element with id="countdown"
+      document.getElementById("countdown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
 
-    // Output the result in the element with id="countdown"
-    document.getElementById("countdown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-
-    // If the countdown is finished, write some text
-    if (timeRemaining < 0) {
-      clearInterval(countdownFunction);
-      document.getElementById("countdown").innerHTML = "EXPIRED";
-    }
-  }, 1000);
-</script>
+      // If the countdown is finished, write some text
+      if (timeRemaining < 0) {
+        clearInterval(countdownFunction);
+        document.getElementById("countdown").innerHTML = "EXPIRED";
+      }
+    }, 1000);
+  </script>
 
 </body>
 </html>
