--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       text-align: center;
       color: #fff;
       font-size: 3vw; /* Font size relative to the width of the viewport */
-      margin-top: -80vh; /* Keep the countdown where it is */
-      background: none; /* Removed semi-transparent background */
+      position: absolute;
+      top: 40%; /* Adjusted for better control */
       padding: 10px;
-      margin-bottom: 20px; /* Add some space at the bottom */
+      background: none; /* Removed semi-transparent background */
     }
 
     .countdown {
@@ -40,37 +40,45 @@
       padding: 0;
     }
 
-    /* Style for the GIF */
     .gif-container {
       position: absolute; /* Absolute positioning */
-      top: 92vh; /* Place the GIF at 92vh from the top */
+      top: 60%; /* Adjusted for better control */
       left: 50%; /* Center the GIF horizontally */
       transform: translate(-50%, -50%); /* Adjust for exact centering */
-      max-width: 600px; /* Max width to make the GIF responsive */
+      max-width: 30%; /* Adjusted max-width for a responsive design */
       height: auto; /* Maintain aspect ratio */
+    }
+
+    /* Responsive styles */
+    @media (max-width: 768px) {
+      .countdown-container {
+        top: 30%; /* Adjust for mobile */
+        font-size: 6vw; /* Larger font size for smaller screens */
+      }
+
+      .gif-container {
+        top: 70%; /* Adjust for mobile */
+        max-width: 50%; /* Larger GIF for smaller screens */
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- GIF container as a clickable link -->
-  <div class="gif-container">
-    <a href="trailer.html">
-      <img src="https://ksturff.github.io/GTA-VI-Official-Countdown/ezgif-4-484594a530.gif" alt="Animated Logo" style="width: 100%; height: auto;">
-    </a>
-  </div>
-
-  <!-- Countdown container -->
   <div class="countdown-container">
     <div id="countdown" class="countdown">
       00d 00h 00m 00s
     </div>
   </div>
 
-  <!-- Countdown Timer Script -->
+  <div class="gif-container">
+    <a href="trailer.html">
+      <img src="https://ksturff.github.io/GTA-VI-Official-Countdown/ezgif-4-484594a530.gif" alt="Animated Logo">
+    </a>
+  </div>
+
   <script>
     var countDownDate = new Date("Sep 23, 2025 00:00:00 EST").getTime();
-
     var countdownFunction = setInterval(function() {
       var now = new Date().getTime();
       var timeRemaining = countDownDate - now;
@@ -78,9 +86,7 @@
       var hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       var minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
       var seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
-
       document.getElementById("countdown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-
       if (timeRemaining < 0) {
         clearInterval(countdownFunction);
         document.getElementById("countdown").innerHTML = "EXPIRED";
