--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
     }
 
     body, html {
-  height: 100%;
-  margin: 0;
-  font-family: 'Acherus Grotesque', Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/GTA-6-Logo-4K-Wallpaper.png') no-repeat fixed;
-  background-size: cover;
-  background-position: calc(50% + 10px) center; /* Adjust the horizontal position */
-}
-
+      height: 100%;
+      margin: 0;
+      font-family: 'Acherus Grotesque', Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/GTA-6-Logo-4K-Wallpaper.png') no-repeat center center fixed;
+      background-size: cover; /* Ensures the background covers the entire viewport */
     }
 
     .countdown-container {
