--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/GTA-6-Logo-4K-Wallpaper.png') no-repeat center center fixed;
+      background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/Untitled design (5).png') no-repeat center center fixed;
       background-size: cover; /* Ensures the background covers the entire viewport */
     }
 
