--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       align-items: center;
       background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/Untitled design (5).png') no-repeat center center fixed;
       background-size: cover; /* Ensures the background covers the entire viewport */
+      background-color: black; /* Sets the background color to black */
     }
 
     .countdown-container {
