--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/Untitled design (5).png') no-repeat fixed;
+      background: url('https://ksturff.github.io/GTA-VI-Official-Countdown/Untitled design (5).png') no-repeat center center fixed;
       background-size: cover; /* Ensures the background covers the entire viewport */
-      background-position: calc(50% + 20px) center; /* Adjust the horizontal position */
       background-color: black; /* Sets the background color to black */
     }
 
