--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       background: none; /* Removed semi-transparent background */
       padding: 10px;
       margin-bottom: 20px; /* Add some space at the bottom */
+      position: relative;
+      left: -20px; /* Move to the left by 20px */
     }
 
     .countdown {
